--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.1.1",
     "nodemon": "^2.0.15",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
